--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>690</width>
-    <height>560</height>
+    <height>558</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -157,6 +157,7 @@
    <addaction name="actionDelete"/>
    <addaction name="separator"/>
   </widget>
+  <widget class="QStatusBar" name="statusBar"/>
   <action name="actionSave">
    <property name="text">
     <string>Mentés</string>
